# RaylibBreakout

./: CMakeLists.txt  \  dependencies.sh  run.sh
src/: main.c
src/headers/: ball.h  ball_movement.c  block.c  block.h  data.h  gamestate.h  ui.c  ui.h
